allow setting the cluster tag via query parameter
